--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -12,3 +12,8 @@
 @using MudBlazor
 
 @using BlazorEcommerce.Shared.Models
+
+
+
+@*Services*@
+@using BlazorEcommerce.Client.Services.ProductService
