--- a/BlazorEcommerce/Client/Pages/FetchData.razor
+++ b/BlazorEcommerce/Client/Pages/FetchData.razor
@@ -8,13 +8,13 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@*@if (forecasts == null)
 {
     <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
+}*@
+@*else
+{*@
+@*    <table class="table">
         <thead>
             <tr>
                 <th>Date</th>
@@ -34,14 +34,9 @@ else
                 </tr>
             }
         </tbody>
-    </table>
-}
+    </table>*@
+
 
 @code {
-    private WeatherForecast[]? forecasts;
-
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
-    }
+   
 }
