Added CategoryServices. Updated ProductList.razor to use events and state. Added categories to MyNavMenu. Added ProductVariant and ProductType classes

--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -1,6 +1,21 @@
-﻿@using BlazorEcommerce.Client.Shared.Components
-@page "/"
+﻿@page "/"
+@page "/{categoryUrl}"
+
+@using BlazorEcommerce.Client.Shared.Components
+
+@inject IProductService productService;
 
 <PageTitle>My Shop</PageTitle>
 
 <ProductList />
+
+@code {
+
+    [Parameter]
+    public string CategoryUrl { get; set; }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await productService.GetProducts(CategoryUrl);
+    }
+}
