--- a/BlazorEcommerce/Client/Pages/ProductDetails.razor
+++ b/BlazorEcommerce/Client/Pages/ProductDetails.razor
@@ -4,29 +4,66 @@
 
 @inject IProductService productService
 
-@if(product == null)
+@if (product == null)
 {
     <LoadingSpinner Text="@message" />
 }
 else
 {
+    <div>
+        <MudCard>
+            <MudCardContent Class="media">
 
-    <div class="media">
-        <div class="media-img-wrapper mr-2">
-            <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
-        </div>
-        <div class="media-body">
-            <h2 class="mb-0">@product.Title</h2>
-            <p>@product.Description</p>
-            <h4 class="price">@product.Price</h4>
-        </div>
+                <MudImage Src="@product.ImageUrl" Class="rounded-lg media-img" Alt="@product.Title" />
+
+                <div class="media-body">
+                    <MudText Typo="Typo.h4">@product.Title</MudText>
+                    <MudDivider Style="margin-bottom: 15px" />
+                    
+                    <MudGrid>
+                        <MudItem xs="6">
+                            <MudText Typo="Typo.subtitle1">@product.Description</MudText>
+                        </MudItem>
+                        <MudItem xs="6">
+                            @if (product.Variants != null && product.Variants.Count > 1)
+                            {
+
+                                <MudSelect T="int" Label="" Variant="Variant.Filled" @bind-Value="currentTypeId" AnchorOrigin="Origin.BottomCenter" Class="variant-select">
+                                    @foreach (var variant in product.Variants)
+                                    {
+                                        <MudSelectItem Value="@variant.ProductTypeId">@variant.ProductType.Name</MudSelectItem>
+                                    }
+                                </MudSelect>
+
+                            }
+                            @if (GetSelectedVariant() != null)
+                            {
+                                @if (GetSelectedVariant().OriginalPrice > GetSelectedVariant().Price)
+                                {
+                                    <MudText Typo="Typo.h6" Class="original-price">£@GetSelectedVariant().OriginalPrice</MudText>
+
+                                }
+                                <MudText Typo="Typo.h4">£@GetSelectedVariant().Price</MudText>
+                            }
+                        </MudItem>
+                    </MudGrid>
+
+
+
+                </div>
+            </MudCardContent>
+        </MudCard>
     </div>
+
 }
+
+<link href="../Pages/ProductDetails.razor.css" rel="stylesheet" type="text/css" />
 
 
 @code {
     private Product? product = null;
     private string message = string.Empty;
+    private int currentTypeId = 1;
 
     [Parameter]
     public int Id { get; set; }
@@ -38,17 +75,27 @@ else
 
         var result = await productService.GetProductById(Id);
 
-        if(!result.Success)
+        if (!result.Success)
         {
             message = result.Message;
         }
         else
         {
             product = result.Data;
+
+            if (product.Variants.Count > 0)
+            {
+                currentTypeId = product.Variants[0].ProductTypeId;
+            }
         }
 
-
-
-
     }
+
+    private ProductVariant GetSelectedVariant()
+    {
+        var variant = product.Variants.FirstOrDefault(v => v.ProductTypeId == currentTypeId);
+        return variant;
+    }
+
+
 }
