--- a/BlazorEcommerce/Client/Shared/Components/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/Components/ProductList.razor
@@ -31,7 +31,7 @@ else
                                 <MudLink Href="@detailLink" Typo="Typo.h4">@product.Title</MudLink>
                                 <MudDivider Style="margin-bottom: 15px" />
                                 <MudText Typo="Typo.subtitle1">@product.Description</MudText>
-                                <MudText Typo="Typo.h5" Class="price">£@product.Price</MudText>
+                                <MudText Typo="Typo.h5" Class="price">@GetPriceText(product)</MudText>
                             </div>
                         </MudCardContent>
                     </MudCard>
@@ -40,8 +40,6 @@ else
         </MudList>
     </div>
 }
-
-
 
 
 @code {
@@ -60,6 +58,25 @@ else
     private void GoToProduct(int id)
     {
         navigationManager.NavigateTo($"/product/{id}");
+    }
+
+    private string GetPriceText(Product product)
+    {
+        var variants = product.Variants;
+
+        if (variants.Count == 0)
+        {
+            return string.Empty;
+        }
+        else if (variants.Count == 1)
+        {
+            return $"£{variants[0].Price}";
+        }
+        else
+        {
+            decimal minPrice = variants.Min(v => v.Price);
+            return $"Starting at £{minPrice}";
+        }
     }
 
 }
