--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@page "/search/{searchText}"
 @page "/{categoryUrl}"
 
 @using BlazorEcommerce.Client.Shared.Components
@@ -10,12 +11,22 @@
 <ProductList />
 
 @code {
+    [Parameter]
+    public string? CategoryUrl { get; set; } = null;
 
     [Parameter]
-    public string CategoryUrl { get; set; }
+    public string? SearchText { get; set; } = null;
 
     protected override async Task OnParametersSetAsync()
     {
-        await productService.GetProducts(CategoryUrl);
+        if(SearchText != null)
+        {
+            await productService.SearchProducts(SearchText);
+        }
+        else
+        {
+            await productService.GetProducts(CategoryUrl);
+        }
+        
     }
 }
