--- a/BlazorEcommerce/Client/Shared/Components/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/Components/ProductList.razor
@@ -9,7 +9,7 @@
 
 @if (productService.Products == null || productService.Products.Count == 0)
 {
-    <LoadingSpinner Text="Loading product list" />
+    <LoadingSpinner Text="@productService.Message" />
 }
 else
 {
