Updated app name in appbar

--- a/BlazorEcommerce/Client/Shared/MainLayout.razor
+++ b/BlazorEcommerce/Client/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Blazor</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">Blazor Shop</MudText>
         <MudSpacer />
         <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Home" Color="Color.Inherit" Size="Size.Large">Home</MudButton>
         <MudSpacer />
