--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -9,12 +9,15 @@
 @using BlazorEcommerce.Client
 @using BlazorEcommerce.Client.Shared
 
+@*NuGet*@
 @using MudBlazor
+@using Blazored.LocalStorage
 
 @using BlazorEcommerce.Shared.Models
 
 
 
 @*Services*@
-@using BlazorEcommerce.Client.Services.ProductService
-@using BlazorEcommerce.Client.Services.CategoryService
+@using BlazorEcommerce.Client.Stores.Interfaces
+@using BlazorEcommerce.Client.Stores
+
