--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -1,12 +1,17 @@
 ﻿@page "/"
-@page "/search/{searchText}"
+@page "/search/{searchText}/{page:int}"
 @page "/{categoryUrl}"
 
 @using BlazorEcommerce.Client.Shared.Components
 
-@inject IProductService productService;
+@inject IProductStore productStore;
 
 <PageTitle>My Shop</PageTitle>
+
+@if(SearchText == null && CategoryUrl == null)
+{
+    <FeaturedProducts />
+}
 
 <ProductList />
 
@@ -17,15 +22,18 @@
     [Parameter]
     public string? SearchText { get; set; } = null;
 
+    [Parameter]
+    public int Page { get; set; } = 1;
+
     protected override async Task OnParametersSetAsync()
     {
         if(SearchText != null)
         {
-            await productService.SearchProducts(SearchText);
+            await productStore.SearchProducts(SearchText, Page);
         }
         else
         {
-            await productService.GetProducts(CategoryUrl);
+            await productStore.GetProducts(CategoryUrl);
         }
         
     }
