--- a/BlazorEcommerce/Client/Shared/FeaturedProducts.razor
+++ b/BlazorEcommerce/Client/Shared/FeaturedProducts.razor
@@ -6,7 +6,7 @@
 
 @if(productStore.Products == null || productStore.Products.Count == 0)
 {
-    <LoadingSpinner Text="@productStore.Message" />
+    <LoadingSpinner Text="Loading featured products" />
 }
 else
 {
