--- a/BlazorEcommerce/Client/Shared/ShopNavMenu.razor
+++ b/BlazorEcommerce/Client/Shared/ShopNavMenu.razor
@@ -17,7 +17,8 @@
         <SearchBar />
         <MudSpacer />
         <CartCounter />
-        <MudIconButton Icon="@Icons.Material.Filled.Person" Color="Color.Tertiary" aria-label="Cart" Size="Size.Large"></MudIconButton>
+        <UserButton />
+        <MudSpacer />
         
 </MudAppBar>
 
