--- a/BlazorEcommerce/Client/Shared/ShopLayout.razor
+++ b/BlazorEcommerce/Client/Shared/ShopLayout.razor
@@ -12,7 +12,7 @@
     
     <ShopNavMenu />
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
+        <MudContainer MaxWidth="MaxWidth.ExtraLarge">
             @Body
         </MudContainer>
     </MudMainContent>
