--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -8,10 +8,13 @@
 @using Microsoft.JSInterop
 @using BlazorEcommerce.Client
 @using BlazorEcommerce.Client.Shared
+@using Microsoft.AspNetCore.Authorization
+
 
 @*NuGet*@
 @using MudBlazor
 @using Blazored.LocalStorage
+@using Microsoft.AspNetCore.Components.Authorization
 
 @using BlazorEcommerce.Shared.Models
 
