--- a/BlazorEcommerce/Client/Shared/Components/CartCounter.razor
+++ b/BlazorEcommerce/Client/Shared/Components/CartCounter.razor
@@ -13,8 +13,8 @@
 
     private int GetCartItemsCount()
     {
-        var cart = localStorage.GetItem<List<CartItem>>("cart");
-        return cart != null ? cart.Count : 0;
+        var count = localStorage.GetItem<int>("cartItemsCount");
+        return count;
 
     }
 
