--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -3,12 +3,17 @@
 @using BlazorEcommerce.Client.Shared.Components.Common
 
 @inject ICartStore cartStore
+@inject IOrderStore orderStore
 
 <PageTitle>Shopping Cart</PageTitle>
 
 @if(cartProducts == null || cartProducts.Count == 0)
 {
     <LoadingSpinner Text="@message"/>
+}
+else if (orderPlaced)
+{
+    <span>Thank you for your order! You can check your orders <a href="orders">here</a></span>
 }
 else
 {
@@ -76,10 +81,11 @@ else
                 <MudText Typo="Typo.h6">Total (@cartProducts.Count): £@cartProducts.Sum(product => product.Price * product.Quantity)</MudText>
             </MudItem>
             <MudItem xs="2">
-
+                <MudButton OnClick="() => PlaceOrder()" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.ShoppingCartCheckout" Color="Color.Primary">Place Order</MudButton>
             </MudItem>
         </MudGrid>
 
+        
 
     </div>
 }
@@ -88,10 +94,12 @@ else
 
     List<CartProductResponse> cartProducts = null;
     string message = "Loading cart...";
+    bool orderPlaced = false;
 
 
     protected override async Task OnInitializedAsync()
     {
+        orderPlaced = false;
         await LoadCart();
     }
 
@@ -121,6 +129,15 @@ else
             product.Quantity = 1;
 
         await cartStore.UpdateQuantity(product);
+    }
+
+    private async Task PlaceOrder()
+    {
+        await orderStore.PlaceOrder();
+
+        await cartStore.GetCartItemsCount();
+
+        orderPlaced = true;
     }
 
 }
