Adding stripe checkout integration with webhooks

--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -4,6 +4,7 @@
 
 @inject ICartStore cartStore
 @inject IOrderStore orderStore
+@inject NavigationManager navMan
 
 <PageTitle>Shopping Cart</PageTitle>
 
@@ -11,10 +12,10 @@
 {
     <LoadingSpinner Text="@message"/>
 }
-else if (orderPlaced)
+@*else if (orderPlaced)
 {
     <span>Thank you for your order! You can check your orders <a href="orders">here</a></span>
-}
+}*@
 else
 {
     <div>
@@ -81,7 +82,7 @@ else
                 <MudText Typo="Typo.h6">Total (@cartProducts.Count): £@cartProducts.Sum(product => product.Price * product.Quantity)</MudText>
             </MudItem>
             <MudItem xs="2">
-                <MudButton OnClick="() => PlaceOrder()" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.ShoppingCartCheckout" Color="Color.Primary">Place Order</MudButton>
+                <MudButton OnClick="() => PlaceOrder()" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.ShoppingCartCheckout" Color="Color.Primary">Checkout</MudButton>
             </MudItem>
         </MudGrid>
 
@@ -94,12 +95,12 @@ else
 
     List<CartProductResponse> cartProducts = null;
     string message = "Loading cart...";
-    bool orderPlaced = false;
+    //bool orderPlaced = false;
 
 
     protected override async Task OnInitializedAsync()
     {
-        orderPlaced = false;
+        //orderPlaced = false;
         await LoadCart();
     }
 
@@ -133,11 +134,15 @@ else
 
     private async Task PlaceOrder()
     {
-        await orderStore.PlaceOrder();
+        string url = await orderStore.PlaceOrder();
 
-        await cartStore.GetCartItemsCount();
+        navMan.NavigateTo(url);
 
-        orderPlaced = true;
+        //await orderStore.PlaceOrder();
+
+        //await cartStore.GetCartItemsCount();
+
+        //orderPlaced = true;
     }
 
 }
