--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -1,10 +1,12 @@
 ﻿@page "/cart"
 @using BlazorEcommerce.Shared;
 @using BlazorEcommerce.Client.Shared.Components.Common
+@using BlazorEcommerce.Client.Shared.Components
 
 @inject ICartStore cartStore
 @inject IOrderStore orderStore
 @inject NavigationManager navMan
+@inject IAuthStore authStore
 
 <PageTitle>Shopping Cart</PageTitle>
 
@@ -66,6 +68,16 @@ else
         }
 
         <MudGrid>
+            <MudItem xs="12">
+                @if(isAuthenticated)
+                {
+                    <div>
+                        <h5>Delivery Address</h5>
+                        <AddressForm />
+                    </div>
+                    
+                }
+            </MudItem>
             <MudItem xs="2">
 
             </MudItem>
@@ -96,11 +108,13 @@ else
     List<CartProductResponse> cartProducts = null;
     string message = "Loading cart...";
     //bool orderPlaced = false;
+    bool isAuthenticated = false;
 
 
     protected override async Task OnInitializedAsync()
     {
         //orderPlaced = false;
+        isAuthenticated = await authStore.IsUserAuthenticated();
         await LoadCart();
     }
 
